SAV-39: Correct spacing on posts.

--- a/assets/styles/_scss/_post.scss
+++ b/assets/styles/_scss/_post.scss
@@ -6,7 +6,6 @@
     }
     header {
         text-align: center;
-        margin-bottom: 2em;
     }
     .previous-next-links {
     	margin-top: 2em;
